media/plex/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  serviceName: plex
  selector:
    matchLabels:
      app: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: plex
          image: plexinc/pms-docker:1.41.0.8994-f2c27da23
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: data
              mountPath: /config/Library/Application Support/Plex Media Server
            - name: cache
              mountPath: /config/Library/Application Support/Plex Media Server/Cache
            - name: logs
              mountPath: /config/Library/Application Support/Plex Media Server/Logs
            - name: transcode
              mountPath: /transcode
            - name: music
              mountPath: /mnt/data/music
            - name: media
              mountPath: /mnt/media
          resources:
            requests:
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: plex-cache
        - name: data
          persistentVolumeClaim:
            claimName: plex-data
        - name: logs
          emptyDir: {}
        - name: transcode
          emptyDir: {}
        - name: music
          nfs:
            path: /mnt/data/music
            server: nas.internal
        - name: media
          nfs:
            path: /mnt/media
            server: nas.internal
