media/plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.28
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
  selector:
    app: plex
